--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -63,7 +63,7 @@
 
   .button {
     display: inline-block;
-    background-color: #f60;
+    background-color: #A8EACE;
     color: #fff;
     text-decoration: none;
     padding: 0.5rem 1rem;
