--- a/app/views/mangas/new.html.erb
+++ b/app/views/mangas/new.html.erb
@@ -9,12 +9,14 @@
     font-size: 2rem;
     margin-bottom: 1rem;
     text-align: center;
+    color: yellow;
   }
 
   .form-inputs {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    color: yellow;
   }
 
   .field {
