--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -74,6 +74,78 @@
   .button:hover {
     background-color: #f90;
   }
+
+  .review-section {
+  max-width: 800px;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+}
+
+.review-title,
+.add-review-title {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+}
+
+.review {
+  background-color: #f7f7f7;
+  border-radius: 5px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.review-author {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.review-content {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.review-rating {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.add-review-form {
+  margin-top: 1rem;
+}
+
+.form-group {
+  margin-bottom: 1rem;
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+}
+
+.submit-btn {
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #ffc107;
+  border: 1px solid transparent;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.
+}
 </style>
 
 <div class="manga-details">
@@ -102,4 +174,31 @@
   <%= link_to 'New Chapter', new_manga_chapter_path(@manga), class: 'button' %>
   <%= link_to 'Edit', edit_manga_path(@manga), class: 'button' %>
   <%= link_to 'Back', mangas_path, class: 'button' %>
+</div>
+
+<div class="review-section">
+  <h2 class="review-title">Manga Reviews</h2>
+  <% @manga.manga_reviews.each do |manga_review| %>
+    <div class="review">
+      <strong class="review-author"><%= manga_review.user.email %>:</strong>
+      <p class="review-content"><%= manga_review.content %></p>
+      <p class="review-rating">Rating: <%= manga_review.rating %></p>
+    </div>
+  <% end %>
+
+  <!-- Add a new review -->
+  <h2 class="add-review-title">Add a manga review</h2>
+  <%= form_with model: [ @manga, @manga.manga_reviews.build ], local: true, html: { class: "add-review-form" } do |form| %>
+    <div class="form-group">
+      <%= form.label :content, class: "form-label" %>
+      <%= form.text_area :content, required: true, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= form.label :rating, class: "form-label" %>
+      <%= form.select :rating, (1..5).to_a, required: true, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= form.submit "Submit Review", class: "submit-btn" %>
+    </div>
+  <% end %>
 </div>
