--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,23 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: #A8EACE;
-}
+// .navbar {
+//   font-family: 'Roboto', sans-serif;
+// }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
+// .navbar-brand {
+//   font-weight: bold;
+// }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
-}
+// .nav-link {
+//   color: #232323;
+// }
+
+// .nav-link:hover {
+//   color: #ff6900;
+// }
+
+// .avatar {
+//   max-height: 40px;
+// }
+
+// .search-form {
+//   margin-right: 1rem;
+// }
