--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+      <%= image_tag "brand_logo.jpg", class: "img-fluid", style: "max-height: 40px;" %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,11 +9,23 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
+      <div class="d-flex flex-row w-100 justify-content-between">
+        <ul class="navbar-nav"></ul>
+        <ul class="navbar-nav">
+          <%= form_with url: mangas_path, method: :get, local: true, html: { class: "d-flex search-form" } do |form| %>
+            <%= form.text_field :search, placeholder: "Search Manga", class: "form-control me-2" %>
+            <%= form.submit "Search", class: "btn btn-outline-primary" %>
+          <% end %>
+        </ul>
+        <ul class="navbar-nav"></ul>
+      </div>
+    </div>
+
+     <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item dropdown">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag "https://avatars.githubusercontent.com/u/118530633?s=400&u=c3e0db0df50eb08c2145bed42682aec15dbba468&v=4", class: "avatar", alt: "dropdown menu" %>
+              <%= image_tag "https://avatars.githubusercontent.com/u/118530633?s=400&u=c3e0db0df50eb08c2145bed42682aec15dbba468&v=4", class: "avatar rounded-circle", alt: "dropdown menu", style: "max-height: 40px;" %>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Dashboard", dashboard_index_path, class: "dropdown-item" %>
@@ -28,6 +40,36 @@
           </li>
         <% end %>
       </ul>
-    </div>
   </div>
 </div>
+
+<style>
+  .navbar {
+    font-family: 'Roboto', sans-serif;
+    color: #A8EACE;
+  }
+
+  .navbar-brand {
+    font-weight: bold;
+  }
+
+  .nav-link {
+    color: #232323;
+  }
+
+  .nav-link:hover {
+    color: #ff6900;
+  }
+
+  .avatar {
+    max-height: 40px;
+  }
+
+  .search-form {
+    margin-right: 1rem;
+  }
+
+  .container-fluid {
+    color: #A8EACE;
+  }
+</style>
