--- a/app/assets/stylesheets/pages/_indexdashboard.scss
+++ b/app/assets/stylesheets/pages/_indexdashboard.scss
@@ -118,3 +118,33 @@
   border-color: #999;
   color: #333;
 }
+
+.favorited-mangas {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.favorited-manga {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+  width: 200px;
+  background-color: #f8f9fa;
+  border-radius: 5px;
+  padding: 1rem;
+}
+
+.favorited-manga-image {
+  width: 100%;
+  height: auto;
+}
+
+.favorited-manga-info {
+  text-align: center;
+}
+
+.img-thumbnail {
+  max-width: 100%;
+  height: auto;
+}
