updated search with tags

--- a/app/views/mangas/index.html.erb
+++ b/app/views/mangas/index.html.erb
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
+    color: #FFFFD2
   }
 
   .manga-container {
@@ -99,8 +100,8 @@
 
 <div class="page-header">
   <h1>Recently Added</h1>
-  <%= link_to 'New Manga', new_manga_path, class: 'btn' %> <!-- Add the 'btn' class -->
-  <%= link_to 'Go to Dashboard', dashboard_index_path, class: 'btn' %> <!-- Add the 'btn' class -->
+  <%# <%= link_to 'New Manga', new_manga_path, class: 'btn' %> <!-- Add the 'btn' class -->
+  <%# <%= link_to 'Go to Dashboard', dashboard_index_path, class: 'btn' %> <!-- Add the 'btn' class -->
 </div>
 
 <div class="manga-container">
