--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,18 +8,19 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <div class="d-flex flex-row w-100 justify-content-between">
-        <ul class="navbar-nav"></ul>
-        <ul class="navbar-nav">
-          <%= form_with url: mangas_path, method: :get, local: true, html: { class: "d-flex search-form", "data-controller": "search", "data-action": "submit->search#submit", "data-target": "search.results" } do |form| %>
-            <%= form.text_field :search, placeholder: "Search Manga", class: "form-control me-2" %>
-            <%= form.submit "Search", class: "btn btn-outline-primary" %>
-          <% end %>
-        </ul>
-        <ul class="navbar-nav"></ul>
-      </div>
-    </div>
+<div class="collapse navbar-collapse" id="navbarSupportedContent" data-controller="search">
+  <div class="d-flex flex-row w-100 justify-content-between">
+    <ul class="navbar-nav"></ul>
+    <ul class="navbar-nav">
+      <%= form_with url: mangas_path, method: :get, local: true, html: { class: "d-flex search-form" } do |form| %>
+        <%= form.text_field :search, placeholder: "Search Manga", class: "form-control me-2", data: { target: "search.query" } %>
+        <%= form.submit "Search", class: "btn btn-outline-primary", data: { action: "submit->search#submit" } %>
+      <% end %>
+    </ul>
+    <ul class="navbar-nav"></ul>
+  </div>
+  <div data-target="search.results"></div>
+</div>
 
      <ul class="navbar-nav">
         <% if user_signed_in? %>
