front end dashboard and landing page basic done

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,3 +21,18 @@
 // .search-form {
 //   margin-right: 1rem;
 // }
+
+
+// -----------------------above code is from system/le wagon default setting
+// below is Mary's code
+
+.manga-genre-navbar{
+  background-color: #CEFFEA;
+  font-weight: bold;
+  height: 36px;
+  font-size: 1.2em;
+}
+
+li {
+  list-style: none;
+}
