--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,20 +1,35 @@
 .avatar {
   width: 60px;
+  height: auto;
   border-radius: 50%;
 }
 .avatar-large {
-  width: 66px;
+  width: 80px;
+  height: auto;
   border-radius: 50%;
 }
 .avatar-bordered {
   width: 40px;
+  height: auto;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
 .avatar-square {
   width: 40px;
+  height: auto;
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+}
+
+// Above its system/le wagon default
+
+// below is Mary coded:
+
+.avatar-user {
+  font-size: 4em;
+  background-color: #A8EACE;
+  padding: 0.5em;
+  border-radius: 50%;
 }
