--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,6 +10,15 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
+    <%= f.input :username, required: false %>
+    <%= f.input :avatar,
+                as: :file,
+                hint: "upload your avatar now! ~",
+                required: false,
+                input_html: { autocomplete: "avatar" } %>
+    <%= f.input :bio, required: false%>
+    <%= f.input :instagram, required: false%>
+    <%= f.input :twitter, required: false%>
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
@@ -24,7 +33,8 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    raise
+    <%= f.button :submit, "Update", class: "btn btn-primary" %>
   </div>
 <% end %>
 
