--- a/app/views/mangas/index.html.erb
+++ b/app/views/mangas/index.html.erb
@@ -1,62 +1,36 @@
+<%# manga genre ->css:_navabr %>
+<ul class="manga-genre-navbar border border-primary d-flex justify-content-around align-items-center">
+  <li class="border border-primary">Adventure</li>
+  <li>Fantasy</li>
+  <li>Sci-Fic</li>
+  <li>Romance</li>
+  <li>Supernatural</li>
+  <li>Historical</li>
+  <li>SuperHero</li>
+  <li>BL</li>
+  <li>GL</li>
+</ul>
+
+<div class="container">
+  <h1>Top & Popular Manga</h1>
+
+  <%# top mangas %>
+  <div class="cards">
+    <% @mangas.each do |manga| %>
+      <div class="card border border-primary", onclick="location.href='<%= manga_path(manga) %>'">
+        <% if manga.cover_image.attached? %>
+          <%= cl_image_tag manga.cover_image.key, crop: :fill, alt: manga.manga_title %>
+        <% else %>
+          <p>No cover image</p>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+
+<%# ------------------------------------------------------------ %>
 <style>
-  .page-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2rem;
-    color: #FFFFD2
-  }
-
-  .manga-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-gap: 1rem;
-    margin-bottom: 1rem;
-  }
-
-  .manga-card {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 1rem;
-    text-align: center;
-    background-color: #f9f9f9;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease-in-out;
-  }
-
-  .manga-card:hover {
-    transform: translateY(-5px);
-  }
-
-  .manga-cover {
-    width: 180px;
-    height: 270px;
-    margin-bottom: 1rem;
-  }
-
-  .manga-title {
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-  }
-
-  .manga-author {
-    font-size: 0.9rem;
-    margin-bottom: 0.5rem;
-  }
-
-  .manga-description {
-    font-size: 0.8rem;
-    margin-bottom: 0.5rem;
-  }
-
-  .manga-links {
-    display: flex;
-    justify-content: space-around;
-    font-size: 0.9rem;
-    margin-top: 1rem;
-  }
-
   .manga-links a {
     color: #fff;
     text-decoration: none;
@@ -67,11 +41,6 @@
     transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
   }
 
-  .manga-links a:hover {
-    text-decoration: none;
-    background-color: #0056b3;
-    border-color: #0056b3;
-  }
 
     /* Add styles for the buttons */
   .btn {
@@ -90,34 +59,4 @@
     background-color: #0056b3;
     border-color: #0056b3;
   }
-
-  /* Space between the header buttons */
-  .page-header a:not(:last-child) {
-    margin-right: 1rem;
-  }
-
 </style>
-
-<div class="page-header">
-  <h1>Recently Added</h1>
-  <%# <%= link_to 'New Manga', new_manga_path, class: 'btn' %> <!-- Add the 'btn' class -->
-  <%# <%= link_to 'Go to Dashboard', dashboard_index_path, class: 'btn' %> <!-- Add the 'btn' class -->
-</div>
-
-<div class="manga-container">
-  <% @mangas.each do |manga| %>
-    <div class="manga-card">
-      <% if manga.cover_image.attached? %>
-        <%= cl_image_tag manga.cover_image.key, width: 180, height: 270, crop: :fill, alt: manga.manga_title, class: "manga-cover", :quality => "auto", :fetch_format => "auto" %>
-      <% else %>
-        <div class="manga-cover">No cover image</div>
-      <% end %>
-      <p class="manga-title"><%= link_to manga.manga_title, manga %></p>
-      <p class="manga-author"><%= manga.author %></p>
-      <p class="manga-description"><%= manga.description.truncate(50) %></p>
-     <div class="manga-links">
-        <%= link_to 'Show', manga %>
-      </div>
-    </div>
-  <% end %>
-</div>
