--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "brand_logoo.jpg", class: "img-fluid", style: "max-height: 40px;" %>
     <% end %>
 
@@ -10,31 +10,52 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <div class="d-flex flex-row w-100 justify-content-between">
-        <ul class="navbar-nav"></ul>
+      <%# search bar??? %>
         <ul class="navbar-nav">
-          <%= form_with url: mangas_path, method: :get, local: true, html: { class: "d-flex search-form" } do |form| %>
-            <%= form.text_field :search, placeholder: "Search Manga", class: "form-control me-2" %>
-            <%= form.submit "Search", class: "btn btn-outline-primary" %>
-          <% end %>
-        </ul>
+          <ul class="navbar-nav">
+            <%= form_with url: mangas_path, method: :get, local: true, html: { class: "d-flex search-form" } do |form| %>
+              <%= form.text_field :search, placeholder: "Search Manga", class: "form-control me-2" %>
+              <%= form.submit "Search", class: "btn btn-outline-primary" %>
+            <% end %>
+          </ul>
         <ul class="navbar-nav"></ul>
       </div>
     </div>
 
      <ul class="navbar-nav">
         <% if user_signed_in? %>
+
+          <%# display username %>
+          <li class="nav-item">
+            <%= link_to "Hi #{current_user.username}!", "#", class: "nav-link" %>
+          </li>
+
+          <%# button to home page %>
+          <%# <li class="nav-item active">
+            <%= link_to "Home", root_path , class: "nav-link" </li> %>
+
+          <%# button to user dashboard page %>
+          <li class="nav-item">
+            <%= link_to "My Dashboard", dashboard_index_path, class: "nav-link" %>
+          </li>
+
+          <%# javascript - dropdown box from Avatar %>
           <li class="nav-item dropdown">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <%= image_tag "https://avatars.githubusercontent.com/u/118530633?s=400&u=c3e0db0df50eb08c2145bed42682aec15dbba468&v=4", class: "avatar rounded-circle", alt: "dropdown menu", style: "max-height: 40px;" %>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Dashboard", dashboard_index_path, class: "dropdown-item" %>
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
+              <%# example: <%= link_to "Dashboard", dashboard_index_path, class: "dropdown-item" %>
+              <%# example: link_to "Action", "#", class: "dropdown-item" %>
+              <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
+              <%= link_to "Setting", "#", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
+
         <% else %>
+
+          <%# Button to Login in %>
           <li class="nav-item">
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
           </li>
@@ -43,7 +64,8 @@
   </div>
 </div>
 
-<style>
+<%# TODO: MARY - Style Uncomment/move to CSS %>
+<%# <style>
   .navbar {
     font-family: 'Roboto', sans-serif;
     color: #A8EACE;
@@ -72,4 +94,4 @@
   .container-fluid {
     color: #A8EACE;
   }
-</style>
+</style> %>
