css migrated to stylesheets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,12 @@
 @import "components/index";
 @import "pages/index";
 @import "components/background";
-@import "pages/indexdashboard"
+@import "pages/indexdashboard";
+@import "pages/show";
+@import "pages/new";
+@import "pages/edit";
+@import "pages/home";
+@import "pages/chapterslist";
+@import "pages/chaptershow";
+@import "pages/chaptersnew";
+@import "pages/chaptersindex";
