fixed avatar upload in navbar and dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
 @import "components/background";
 
 // TBC
-@import "pages/indexdashboard";
+// @import "pages/indexdashboard";
 @import "pages/show";
 @import "pages/new";
 @import "pages/edit";
