--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,7 +42,11 @@
           <%# javascript - dropdown box from Avatar %>
           <li class="nav-item dropdown">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag "https://avatars.githubusercontent.com/u/118530633?s=400&u=c3e0db0df50eb08c2145bed42682aec15dbba468&v=4", class: "avatar rounded-circle", alt: "dropdown menu", style: "max-height: 40px;" %>
+              <% if current_user.avatar.present? %>
+                <%= cl_image_tag current_user.avatar.key, class: "avatar rounded-circle", alt: "dropdown menu", style: "max-height: 40px;" %>
+              <% else %>
+                <i class="avatar-user border border-primary fa-solid fa-user"></i>
+              <% end %>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%# example: <%= link_to "Dashboard", dashboard_index_path, class: "dropdown-item" %>
@@ -93,4 +97,3 @@
     color: #A8EACE;
   }
 </style> %>
-
