--- a/app/assets/stylesheets/pages/_chaptershow.scss
+++ b/app/assets/stylesheets/pages/_chaptershow.scss
@@ -99,6 +99,7 @@ body {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
+    color: #000;
   }
 
   .form-container,
@@ -146,6 +147,11 @@ body {
     border-radius: 5px;
   }
 
-  .user-email {
-    font-weight: bold;
-  }
+  .avatar-small {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    vertical-align: middle;
+    margin-right: 10px;
+}
