coding on front end

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,12 +13,11 @@
 @import "components/background";
 
 // TBC
-@import "pages/indexdashboard";
-@import "pages/show";
+// @import "pages/show";
 @import "pages/new";
-@import "pages/edit";
-@import "pages/home";
-@import "pages/chapterslist";
-@import "pages/chaptershow";
-@import "pages/chaptersnew";
-@import "pages/chaptersindex";
+// @import "pages/edit";
+// @import "pages/home";
+// @import "pages/chapterslist";
+// @import "pages/chaptershow";
+// @import "pages/chaptersnew";
+// @import "pages/chaptersindex";
