--- a/app/views/mangas/index.html.erb
+++ b/app/views/mangas/index.html.erb
@@ -1,17 +1,17 @@
 <%# manga genre ->css:_navabr %>
 <ul class="manga-genre-navbar border border-primary d-flex justify-content-around align-items-center">
-  <li class="border border-primary">Adventure</li>
-  <li>Fantasy</li>
-  <li>Sci-Fic</li>
-  <li>Romance</li>
-  <li>Supernatural</li>
-  <li>Historical</li>
-  <li>SuperHero</li>
-  <li>BL</li>
-  <li>GL</li>
+  <li class="border border-primary" data-text="Adventure">Adventure</li>
+  <li data-text="Fantasy">Fantasy</li>
+  <li data-text="Sci-Fic">Sci-Fic</li>
+  <li data-text="Romance">Romance</li>
+  <li data-text="Supernatural">Supernatural</li>
+  <li data-text="Historical">Historical</li>
+  <li data-text="SuperHero">SuperHero</li>
+  <li data-text="BL">BL</li>
+  <li class="border border-primary" data-text="GL">GL</li>
 </ul>
 
-<div class="container">
+<div class="m-4">
   <h1>Top & Popular Manga</h1>
 
   <%# top mangas %>
