--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -35,6 +35,7 @@
 // -----------------------above code is from system/le wagon default setting
 // below is Mary's code
 
+// manga genres
 .manga-genre-navbar{
   background-color: #CEFFEA;
   font-weight: bold;
@@ -44,4 +45,10 @@
 
 li {
   list-style: none;
+}
+
+li:hover{
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  transition: 0.2s;
 }
